--- a/notifications.html
+++ b/notifications.html
@@ -14,7 +14,6 @@ body {
     overflow-x: hidden;
     transition: background 2s;
 }
-
 /* ⭐ النجوم */
 .stars { position: fixed; width: 100%; height: 100%; z-index: -3; }
 .star {
@@ -25,7 +24,6 @@ body {
     opacity: 0;
 }
 @keyframes twinkle { 0%,100% { opacity: 0.2; } 50% { opacity: 1; } }
-
 /* 🌙 القمر */
 .celestial {
     position: fixed;
@@ -35,7 +33,6 @@ body {
     top:10%; left:80%;
     z-index: -2;
 }
-
 /* 🟦 التحديثات */
 .update-container {
     max-width: 900px;
@@ -52,7 +49,6 @@ body {
     50% { box-shadow: 0 0 50px #0ff, 0 0 100px #0ff; }
     100% { box-shadow: 0 0 30px #0ff, 0 0 60px #00f; }
 }
-
 .update-container h1 {
     text-align: center;
     font-size: 28px;
@@ -60,7 +56,6 @@ body {
     text-shadow: 0 0 10px #ff3c00, 0 0 20px #ff8000;
     margin-bottom: 20px;
 }
-
 .update {
     background: rgba(255,255,255,0.05);
     margin: 15px 0;
@@ -73,17 +68,8 @@ body {
     transform: scale(1.02);
     box-shadow: 0 0 25px #ff3c00, 0 0 50px #ff4500 inset;
 }
-
-.update h2 {
-    margin: 0 0 10px 0;
-    color: #00eaff;
-    font-size: 22px;
-}
-.update p {
-    margin: 0;
-    font-size: 18px;
-}
-
+.update h2 { margin: 0 0 10px 0; color: #00eaff; font-size: 22px; }
+.update p { margin: 0; font-size: 18px; }
 /* زر الإغلاق */
 .close-btn {
     display: block;
@@ -104,7 +90,6 @@ body {
     color: #000;
     box-shadow: 0 0 25px #00ffff, 0 0 50px #0ff inset;
 }
-
 /* الهواتف */
 @media(max-width:768px){
     .update-container { padding: 20px; margin: 20px; }
@@ -120,38 +105,34 @@ body {
 
 <div class="update-container">
     <h1>🚀 تحديثات Fun X – الإصدار 1.1 🚀</h1>
-
     <div class="update">
         <h2>✨ إضافة إشعار التحديث الذكي</h2>
         <p>الآن إشعارات التحديث تظهر فقط عند إصدار تحديث جديد، وتختفي بعد القراءة أو إغلاق الصفحة.</p>
     </div>
-
     <div class="update">
         <h2>🎬 فيديوهات يومية</h2>
         <p>تم تحسين عرض الفيديوهات اليومية مع تأثيرات هولوجرامية على الفيديوهات 🔮.</p>
     </div>
-
     <div class="update">
         <h2>🕹 الألعاب</h2>
         <p>تم تحديث لعبة Fun X Battle لتكون أكثر واقعية 🎮🔥 مع نظام حياة ومؤثرات صوتية مستقبلية.</p>
     </div>
-
     <div class="update">
         <h2>📖 القرآن الكريم</h2>
         <p>تم تحسين ركن القرآن ليكون أكثر سهولة وتفاعلية مع واجهة هولوجرامية هادئة 🌙✨.</p>
     </div>
-
     <div class="update">
         <h2>💡 تصميم كلاسيكي ومستقبلي</h2>
         <p>كل عناصر الموقع الآن تتضمن تأثيرات هولوجرامية، نجمات متحركة، قمر متغير حسب الوقت 🌟🌙.</p>
     </div>
-
     <button class="close-btn" onclick="closeUpdates()">✅ تم الاطلاع</button>
-
     <p style="text-align:center; margin-top:30px; font-size:14px; opacity:0.6;">
         جميع الحقوق محفوظة © 2025 Fun X 🌐
     </p>
 </div>
+
+<audio id="bgMusic" src="sounds/Awkward_Apocalyptic_Pickup.mp3" loop autoplay></audio>
+<audio id="clickSound" src="sounds/mixkit-select-click-1109.wav"></audio>
 
 <script>
 // النجوم
@@ -164,42 +145,48 @@ for(let i=0;i<100;i++){
     document.body.appendChild(star);
 }
 
-// إغلاق الصفحة وحفظ أنه تمت القراءة
+// إغلاق التحديثات
 function closeUpdates(){
     localStorage.setItem('updatesRead', 'true');
     window.location.href = 'index.html';
 }
 
-// إذا كانت التحديثات مقروءة بالفعل، لا تظهر مرة أخرى إلا عند تحديث جديد
+// إصدار جديد
 const currentVersion = '1.1';
 if(localStorage.getItem('lastVersion')!==currentVersion){
-    localStorage.removeItem('updatesRead'); // اجعلها تظهر للمرة الأولى للإصدار الجديد
+    localStorage.removeItem('updatesRead');
     localStorage.setItem('lastVersion', currentVersion);
 }
 if(localStorage.getItem('updatesRead')==='true'){
     window.location.href='index.html';
 }
-<!-- أصوات الخلفية والتأثيرات -->
-<audio id="bgMusic" src="sounds/Awkward_Apocalyptic_Pickup.mp3" loop autoplay></audio>
-<audio id="clickSound" src="sounds/mixkit-select-click-1109.wav"></audio>
 
-<script>
-// إعداد صوت الخلفية ليعمل هادئًا ومستمر
+// صوت الخلفية هادي
 const bgMusic = document.getElementById('bgMusic');
-bgMusic.volume = 0.2; // هادئ
+bgMusic.volume = 0.2;
 bgMusic.play().catch(() => {
-    // بعض المتصفحات تمنع التشغيل التلقائي، شغل بعد أول تفاعل
     document.addEventListener('click', () => bgMusic.play(), { once: true });
 });
 
-// دالة لتشغيل صوت النقر/التفاعل
+// صوت التأثيرات عند أي نقرة
 function playEffectSound() {
     const click = document.getElementById('clickSound');
     click.currentTime = 0;
     click.play();
 }
+document.body.addEventListener('click', playEffectSound);
 
-    
+// حركة القمر حسب الوقت
+const celestial = document.querySelector('.celestial');
+function updateCelestial(){
+    const now = new Date();
+    const hour = now.getHours() + now.getMinutes()/60;
+    const percent = hour/24;
+    celestial.style.top = `${10 + percent*60}%`;
+    celestial.style.left = `${10 + percent*80}%`;
+}
+setInterval(updateCelestial,1000);
+updateCelestial();
 </script>
 
 </body>
